--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "fmt": "prettier --write '**/*.{jsx,js,json,css,scss,md}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "clipboard": "^2.0.11",
     "highlight.js": "^11.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
